# GraphHarmonicMap

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  GraphHarmonicMap.sln  README.md  build.sh  data.rar
GraphHarmonicMap/: Graph.cpp  Graph.h  GraphHarmoicMap.cpp  GraphHarmoicMap.h  GraphHarmonicMap.cpp  GraphHarmonicMap.h  GraphHarmonicMap.vcxproj  GraphHarmonicMap.vcxproj.filters  eight.target  main.cpp
GraphHarmonicMap/data/: alex.graph  alex.harmonic  alex.m  eight.cut  eight.graph  eight.harmonic  eight.harmonic.m
data/: alex.cut  alex.graph  alex.harmonic  alex.harmonic.m  alex.m  cat.cut  cat.graph  cat.harmonic.1.m  cat.harmonic.2.m  cat.harmonic.m  cat.m  cat0.harmonic.5.m  eight.b1.graph  eight.b2.graph  eight.b3.graph  eight.cut  eight.graph  eight.harmonic  eight.harmonic.3.m  eight.harmonic.m  eight.m  face1.graph  face1.m  loveme.rar
data/New folder/: cat.harmonic.m  cat.rar  cat0.cut  cat0.harmonic.1.m  cat0.harmonic.3.m  cat0.m  cat1.harmonic.5.m  cat1.harmonic.m  cat1.m
projects/FoliationRegistration/: FoliationRegistration.vcxproj
projects/GraphHarmonicMap/: GraphHarmonicMap.vcxproj
projects/Teichmuller/: Teichmuller.vcxproj
source/: FoliationRegistration.cpp  FoliationRegistration.h  Graph.cpp  Graph.h  GraphHarmonicMap.cpp  GraphHarmonicMap.h  Teichmuller.h  main.cpp  stdafx.cpp
